tests/fixtures/invalid/decimal_bytes_no_precision.avsc
{
  "type": "record",
  "name": "MissingPrecision",
  "fields": [
    {
      "name": "price",
      "type": {
        "type": "bytes",
        "logicalType": "decimal"
      }
    }
  ]
}
